fixed minor translation issues and aligned language button next to cart properly

--- a/styles.css
+++ b/styles.css
@@ -99,10 +99,14 @@ header nav {
     cursor: pointer;
     border-radius: 100%;
     filter: brightness(75%);
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     /* margin: auto; */
-    margin-top: 10px;
+    margin-bottom: 5px;
+
+    background: none;
+    cursor: pointer;
+    margin-left: auto;
     margin-right: 20px;
 }
 
